fix(content-switcher): add focus visible state to content-switcher buttons (#55)
* fix: add focus visible state to content-switcher buttons

* fix: update bem classnaming

* fix: remove disabled examples

* fix: remove disabled state

--- a/src/styles/components/content-switcher/_content-switcher.scss
+++ b/src/styles/components/content-switcher/_content-switcher.scss
@@ -1,105 +1,93 @@
-@import '../../settings/prefix';
 @import '../../tools/text-truncate';
 
-@mixin content-switcher {
-  .#{$prefix}-content-switcher {
-    display: inline-flex;
-    height: $content-switcher-size-height;
-    gap: 1px;
+.#{$prefix}-content-switcher {
+  display: inline-flex;
+  height: $content-switcher-size-height;
+  flex-wrap: nowrap;
+  gap: 1px;
+}
 
-    .#{$prefix}-content-switcher-btn {
-      @include button-base;
+.#{$prefix}-content-switcher__btn {
+  @include button-base;
 
-      height: 100%;
-      border-radius: 0;
+  height: 100%;
+  border-radius: 0;
+}
+
+.#{$prefix}-content-switcher__btn:first-child {
+  border-radius: $button-border-radius 0 0 $button-border-radius;
+}
+
+.#{$prefix}-content-switcher__btn:last-child {
+  border-radius: 0 $button-border-radius $button-border-radius 0;
+}
+
+.#{$prefix}-content-switcher--sm {
+  height: $content-switcher-size-small-height;
+}
+
+.#{$prefix}-content-switcher__label {
+  @include truncate;
+
+  flex-grow: 1;
+}
+
+.#{$prefix}-content-switcher--solid {
+  .#{$prefix}-content-switcher__btn {
+    @include button-variant(
+      $button-color-secondary-background,
+      $button-color-secondary-text,
+      $button-color-secondary-border,
+      $button-color-secondary-hover-background,
+      $button-color-secondary-hover-border,
+      $button-color-secondary-active-background,
+      $button-color-secondary-active-border
+    );
+
+    &:focus-visible {
+      box-shadow: inset 0 0 0 2px $button-color-focus-border,
+        inset 0 0 0 3px $color-white;
     }
-  }
-
-  .#{$prefix}-content-switcher-btn:first-child {
-    border-radius: $button-border-radius 0 0 $button-border-radius;
-  }
-
-  .#{$prefix}-content-switcher-btn:last-child {
-    border-radius: 0 $button-border-radius $button-border-radius 0;
-  }
-
-  .#{$prefix}-content-switcher--sm {
-    height: $content-switcher-size-small-height;
-  }
-
-  .#{$prefix}-content-switcher__label {
-    @include truncate;
-
-    flex-grow: 1;
-  }
-
-  .#{$prefix}-content-switcher--solid {
-    .#{$prefix}-content-switcher-btn {
-      @include button-variant(
-        $button-color-secondary-background,
-        $button-color-secondary-text,
-        $button-color-secondary-border,
-        $button-color-secondary-hover-background,
-        $button-color-secondary-hover-border,
-        $button-color-secondary-active-background,
-        $button-color-secondary-active-border
-      );
-
-      &:disabled,
-      &:hover:disabled,
-      &:focus-visible:disabled,
-      &.#{$prefix}-content-switcher-btn--disabled,
-      &.#{$prefix}-content-switcher-btn--disabled:hover,
-      &.#{$prefix}-content-switcher-btn--disabled:focus-visible {
-        background-color: $button-color-disabled-background;
-        box-shadow: inset 0 0 0 1px $button-color-disabled-border;
-        color: $button-color-disabled-text;
-        cursor: not-allowed;
-      }
-    }
-  }
-
-  .#{$prefix}-content-switcher--outline {
-    .#{$prefix}-content-switcher-btn {
-      @include button-variant(
-        transparent,
-        $button-color-outline-text,
-        $button-color-outline-border,
-        $button-color-outline-hover-background,
-        $button-color-outline-hover-border,
-        $button-color-outline-active-background,
-        $button-color-outline-active-border
-      );
-
-      &:hover {
-        color: $button-color-outline-hover-text;
-      }
-
-      &:active {
-        color: $button-color-outline-active-text;
-      }
-
-      &:disabled,
-      &:hover:disabled,
-      &:focus-visible:disabled,
-      &.#{$prefix}-content-switcher-btn--disabled,
-      &.#{$prefix}-content-switcher-btn--disabled:hover,
-      &.#{$prefix}-content-switcher-btn--disabled:focus-visible {
-        background-color: transparent;
-        box-shadow: inset 0 0 0 1px $button-color-outline-disabled-border;
-        color: $button-color-outline-disabled-text;
-        cursor: not-allowed;
-      }
-    }
-  }
-
-  .#{$prefix}-content-switcher-btn.#{$prefix}-content-switcher-btn--selected,
-  .#{$prefix}-content-switcher-btn.#{$prefix}-content-switcher-btn--selected:hover {
-    background-color: $button-color-outline-active-background;
-    box-shadow: inset 0 0 0 1px $button-color-outline-active-border;
-    color: $button-color-outline-active-text;
-    cursor: default;
   }
 }
 
-@include content-switcher;
+.#{$prefix}-content-switcher--outline {
+  gap: 0;
+
+  .#{$prefix}-content-switcher__btn {
+    @include button-variant(
+      transparent,
+      $button-color-outline-text,
+      $button-color-outline-border,
+      $button-color-outline-hover-background,
+      $button-color-outline-hover-border,
+      $button-color-outline-active-background,
+      $button-color-outline-active-border
+    );
+
+    &:not(:first-child) {
+      margin-right: -1px;
+    }
+
+    &:hover {
+      color: $button-color-outline-hover-text;
+    }
+
+    &:active {
+      color: $button-color-outline-active-text;
+    }
+
+    &:focus-visible {
+      box-shadow: inset 0 0 0 2px $button-color-focus-border,
+        inset 0 0 0 3px $color-white;
+    }
+  }
+}
+
+.#{$prefix}-content-switcher__btn.#{$prefix}-content-switcher__btn--selected,
+.#{$prefix}-content-switcher__btn.#{$prefix}-content-switcher__btn--selected:hover {
+  background-color: $button-color-outline-active-background;
+  box-shadow: inset 0 0 0 1px $button-color-outline-active-border;
+  color: $button-color-outline-active-text;
+  cursor: default;
+}
